Use tikz and subfig packages.

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,11 @@
 \usepackage{import}
 \usepackage{amsmath,amssymb}
 \usepackage{graphicx}
+\usepackage{tikz}
+\usepackage{subfig}
+
+\usetikzlibrary{arrows}
+\tikzstyle{arrow} = [thick,->,>=stealth]
 
 \def \oomph {\texttt{oomph-lib} }
 
