Citation for code.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -162,3 +162,9 @@
 	author = "A. Bermúdez and L. Hervella-Nieto and A. Prieto and R. Rodrı´guez",
 	keywords = "Perfectly matched layer, Time-harmonic scattering, Helmholtz equation, Finite element method"
 }
+
+@misc{weir,
+	author={Bogle, I. and Harding, B. and Maniatis, C. and Weir, W.},
+	title={Iterative Linear Solvers},
+	year={2016}
+}
