Add definition for differential operator notation.

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,9 @@
 
 \def \oomph {\texttt{oomph-lib} }
 
+% Define the differential d notation
+\def \d{\mathrm{d}}
+
 \ifdefined\only
 	\includeonly{fem}
 \fi
